Fix: VPC CNI dependencies and YAML errors

--- a/yamls/aws-lb-controller-values.yaml
+++ b/yamls/aws-lb-controller-values.yaml
@@ -313,4 +313,4 @@ serviceMonitor:
 podDisruptionBudget:
   enabled: false # [DEFAULT]
   minAvailable: 1 # [DEFAULT]
-  maxUnavailable: 1 # [DEFAULT]
+  # maxUnavailable: 1 # [DEFAULT]
